# cmake-template

./: CMakeLists.txt  README.md  make.sh
src/: CMakeLists.txt  main.cpp
